--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,4 +1,9 @@
-html, body { height: 100%; }
+html, body { 
+  padding: 0px; 
+  margin: 0px; 
+  height: 100%; 
+  overflow: hidden; 
+}
 
 .fixed-header {
   z-index: 1;
@@ -14,9 +19,12 @@ html, body { height: 100%; }
   position: absolute;
   top: 25px;
   bottom: 25px;
-  height: 100%;
-  overflow: scroll;
-  background: #8EBFDB;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;
+/*  overflow-x: hidden;
+  overflow-y: hidden; */  
+  background: #EEEEEE;
+  width: 100%;
 }
 
 .fixed-footer {
@@ -26,5 +34,5 @@ html, body { height: 100%; }
   left: 0;
   width: 100%;
   height: 25px;
-  background: green;  
+  background: green;
 }
