--- a/public/css/app.css
+++ b/public/css/app.css
@@ -15,24 +15,6 @@ html, body {
   background: blue;
 }
 
-.scroll-body {
-  position: absolute;
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;
-/*  overflow-x: hidden;
-  overflow-y: hidden; */  
-  background: #EEEEEE;
-  width: 100%;
-}
-
-.scroll-body.has-header {
-  top: 30px;
-}
-
-.scroll-body.has-footer {
-  bottom: 30px;
-}
-
 .fixed-footer {
   z-index: 1;  
   position: fixed;
@@ -41,4 +23,31 @@ html, body {
   width: 100%;
   height: 30px;
   background: green;
+}
+
+.iscroll-enabled .fixed-header { 
+  position: absolute; 
+}
+
+.iscroll-enabled .fixed-footer { 
+  position: absolute; 
+}
+
+.scroll-body {
+  position: absolute;
+  background: #EEEEEE;
+  width: 100%;
+}
+
+.scroll-body.ios6 {
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch;  
+}
+
+.scroll-body.has-header {
+  top: 30px;
+}
+
+.scroll-body.has-footer {
+  bottom: 30px;
 }
