--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,12 +6,19 @@ html, body {
 }
 
 .fixed-header {
-  z-index: 1;
+/*  z-index: 1;
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
-  height: 50px;
+  height: 50px;*/
+/* new styles */
+	position:absolute; z-index:2;
+	top:0; left:0;
+	width:100%;
+	height:45px;
+	line-height:45px;
+	
 /*  background: #000;*/
   -webkit-box-shadow: 0px 3px 17px rgba(50, 50, 50, 0.5);
   -moz-box-shadow:    0px 3px 17px rgba(50, 50, 50, 0.5);
@@ -22,13 +29,17 @@ background: -webkit-gradient(linear, left top, left bottom, from(#000), to(#000)
 }
 
 .fixed-footer {
-  z-index: 1;  
+/*  z-index: 1;  
   position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 50px;
-/*  background: #000;*/
+  height: 50px;*/
+/* new styles */
+	position:absolute; z-index:2;
+	bottom:0; left:0;
+	width:100%;
+	height:48px;
 background: -webkit-gradient(linear, left top, left bottom, from(#000), to(#000), color-stop(.01, #000),
     color-stop(.02, #555), color-stop(.03, #2d2d2d), color-stop(.5, #151515), color-stop(.51, #000));
     border-top: 1px rgba(255,255,255,0.3) solid;
@@ -60,6 +71,20 @@ background: -webkit-gradient(linear, left top, left bottom, from(#000), to(#000)
 .scroll-body.has-footer {
   bottom: 50px;
 }
+#scroller {
+	position:absolute; z-index:1;
+	/*	-webkit-touch-callout:none;*/
+		-webkit-tap-highlight-color:rgba(0,0,0,0);
+		width:100%;
+		padding:0;
+}
+#wrapper {
+	position:absolute; z-index:1;
+	top:45px; bottom:48px; left:-9999px;
+	width:100%;
+/*	background:#aaa;*/
+	overflow:hidden;
+}
 
 
 
@@ -69,18 +94,83 @@ background: -webkit-gradient(linear, left top, left bottom, from(#000), to(#000)
 /* = List Style CSS = */
 /* ================== */
 
+#scroller ul {
+	list-style:none;
+	padding:0;
+	margin:0;
+	width:100%;
+	text-align:left;
+}
+
+#scroller li {
+	padding:0 10px;
+	height:40px;
+	line-height:40px;
+	border-bottom:1px solid #ccc;
+	border-top:1px solid #fff;
+	background-color:#fafafa;
+	font-size:14px;
+}
+
+#myFrame {
+	position:absolute;
+	top:0; left:0;
+}
+/**
+ *
+ * Pull down styles
+ *
+ */
+#pullDown, #pullUp {
+	background:#fff;
+	height:40px;
+	line-height:40px;
+	padding:5px 10px;
+	border-bottom:1px solid #ccc;
+	font-weight:bold;
+	font-size:14px;
+	color:#888;
+}
+#pullDown .pullDownIcon, #pullUp .pullUpIcon  {
+	display:block; float:left;
+	width:40px; height:40px;
+	background:url(../img/touch/pull-icon.png) 0 0 no-repeat;
+	-webkit-background-size:40px 80px; background-size:40px 80px;
+	-webkit-transition-property:-webkit-transform;
+	-webkit-transition-duration:250ms;	
+}
+#pullDown .pullDownIcon {
+	-webkit-transform:rotate(0deg) translateZ(0);
+}
+#pullUp .pullUpIcon  {
+	-webkit-transform:rotate(-180deg) translateZ(0);
+}
+
+#pullDown.flip .pullDownIcon {
+	-webkit-transform:rotate(-180deg) translateZ(0);
+}
+
+#pullUp.flip .pullUpIcon {
+	-webkit-transform:rotate(0deg) translateZ(0);
+}
+
+#pullDown.loading .pullDownIcon, #pullUp.loading .pullUpIcon {
+	background-position:0 100%;
+	-webkit-transform:rotate(0deg) translateZ(0);
+	-webkit-transition-duration:0ms;
+
+	-webkit-animation-name:loading;
+	-webkit-animation-duration:2s;
+	-webkit-animation-iteration-count:infinite;
+	-webkit-animation-timing-function:linear;
+}
+
+@-webkit-keyframes loading {
+	from { -webkit-transform:rotate(0deg) translateZ(0); }
+	to { -webkit-transform:rotate(360deg) translateZ(0); }
+}
+
 /* ul element */
-#scroller-content {
-	list-style: none;
-}
-#scroller-content li {
-	border-bottom: 1px solid #333;
-	padding: 10px 20px 10px 20px;
-}
-.m-list-item-main-item {
-	font-size: 1.5em;
-	font-weight: bold;
-}
 .split {
 	width: 49%;
 	float: left;
@@ -96,7 +186,3 @@ background: -webkit-gradient(linear, left top, left bottom, from(#000), to(#000)
 	padding-left: 10px;
 	text-align: center;
 }
-
-
-
-
