--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,188 +1,125 @@
 html, body { 
-  padding: 0px; 
-  margin: 0px; 
-  height: 100%; 
-  overflow: hidden; 
+    padding: 0px; 
+    margin: 0px; 
+    height: 100%; 
+    overflow: hidden; 
+}
+
+/*temporary*/
+.fixed-header a, .fixed-footer a { color: #fff;}
+/*temporary*/
+
+.header {
+    display: -webkit-box;
+    display: box;
+    background-color: #1EB0E9;
+    background-image: -webkit-linear-gradient(top, #1EB0E9 0, #109ADC 100%);
+    background-image: linear-gradient(to bottom, #1EB0E9 0, #109ADC 100%);
+    border-bottom: 1px solid #0E5895;
+    box-shadow: inset 0 1px 1px -1px rgba(255, 255, 255, .8);
+    -webkit-box-orient: horizontal;
+    box-orient: horizontal;
 }
 
 .fixed-header {
-/*  z-index: 1;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 50px;*/
-/* new styles */
-	position:absolute; z-index:2;
+	position: fixed;
+	color: #fff; 
+	z-index: 2;
 	top:0; left:0;
 	width:100%;
 	height:45px;
 	line-height:45px;
-	
-/*  background: #000;*/
-  -webkit-box-shadow: 0px 3px 17px rgba(50, 50, 50, 0.5);
-  -moz-box-shadow:    0px 3px 17px rgba(50, 50, 50, 0.5);
-  box-shadow:         0px 3px 17px rgba(50, 50, 50, 0.5);
-background: -webkit-gradient(linear, left top, left bottom, from(#000), to(#000), color-stop(.01, #000),
-    color-stop(.02, #555), color-stop(.03, #2d2d2d), color-stop(.5, #151515), color-stop(.51, #000));
-    border-top: 1px rgba(255,255,255,0.3) solid;
+}
+
+.fixed-header .title {
+    display: block;
+    width: 100%;
+    font-size: 20px;
+    font-weight: bold;
+    line-height: 44px;
+    color: white;
+    text-align: center;
+    text-shadow: 0 -1px rgba(0, 0, 0, .5);
+    white-space: nowrap;
 }
 
 .fixed-footer {
-/*  z-index: 1;  
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 50px;*/
-/* new styles */
-	position:absolute; z-index:2;
-	bottom:0; left:0;
+	position:fixed; 
+	z-index:2;
+	bottom:0; 
+	left:0;
 	width:100%;
 	height:48px;
-background: -webkit-gradient(linear, left top, left bottom, from(#000), to(#000), color-stop(.01, #000),
-    color-stop(.02, #555), color-stop(.03, #2d2d2d), color-stop(.5, #151515), color-stop(.51, #000));
-    border-top: 1px rgba(255,255,255,0.3) solid;
+    background: #000
 }
 
 .no-overflowscrolling .fixed-header { 
-  position: absolute; 
+    position: absolute; 
 }
 
 .no-overflowscrolling .fixed-footer { 
-  position: absolute; 
+    position: absolute; 
 }
 
 .scroll-body {
-  position: absolute;
-  background: #EEEEEE;
-  width: 100%;
+    position: absolute;
+    background: #EEEEEE;
+    width: 100%;
 }
 
-.overflowscrolling .scroll-body {
-  overflow-y: scroll;
-  -webkit-overflow-scrolling: touch;  
+.scroll-body {
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;  
 }
 
 .scroll-body.has-header {
-  top: 50px;
+    top: 45px;
 }
 
 .scroll-body.has-footer {
-  bottom: 50px;
+    bottom: 48px;
 }
-#scroller {
-	position:absolute; z-index:1;
-	/*	-webkit-touch-callout:none;*/
-		-webkit-tap-highlight-color:rgba(0,0,0,0);
-		width:100%;
-		padding:0;
+
+/*#scroller {
+  position:absolute; z-index:1;
+  -webkit-tap-highlight-color:rgba(0,0,0,0);
+  width:100%;
+  padding:0;
 }
+
 #wrapper {
-	position:absolute; z-index:1;
-	top:45px; bottom:48px; left:-9999px;
-	width:100%;
-/*	background:#aaa;*/
-	overflow:hidden;
-}
-
-
-
-
+  position:absolute; z-index:1;
+  top:45px; bottom:48px;  
+  width:100%;
+  overflow:hidden;
+}*/
 
 /* ================== */
 /* = List Style CSS = */
 /* ================== */
 
 #scroller ul {
-	list-style:none;
-	padding:0;
-	margin:0;
-	width:100%;
-	text-align:left;
+    list-style:none;
+    padding:0;
+    margin:0;
+    width:100%;
+    text-align:left;
 }
 
 #scroller li {
-	padding:0 10px;
-	height:40px;
-	line-height:40px;
+	padding:0;
+	margin:0;	
 	border-bottom:1px solid #ccc;
 	border-top:1px solid #fff;
 	background-color:#fafafa;
 	font-size:14px;
 }
-
-#myFrame {
-	position:absolute;
-	top:0; left:0;
-}
-/**
- *
- * Pull down styles
- *
- */
-#pullDown, #pullUp {
-	background:#fff;
-	height:40px;
+#scroller li a {
+    height:40px;
 	line-height:40px;
-	padding:5px 10px;
-	border-bottom:1px solid #ccc;
-	font-weight:bold;
-	font-size:14px;
-	color:#888;
-}
-#pullDown .pullDownIcon, #pullUp .pullUpIcon  {
-	display:block; float:left;
-	width:40px; height:40px;
-	background:url(../img/touch/pull-icon.png) 0 0 no-repeat;
-	-webkit-background-size:40px 80px; background-size:40px 80px;
-	-webkit-transition-property:-webkit-transform;
-	-webkit-transition-duration:250ms;	
-}
-#pullDown .pullDownIcon {
-	-webkit-transform:rotate(0deg) translateZ(0);
-}
-#pullUp .pullUpIcon  {
-	-webkit-transform:rotate(-180deg) translateZ(0);
-}
-
-#pullDown.flip .pullDownIcon {
-	-webkit-transform:rotate(-180deg) translateZ(0);
-}
-
-#pullUp.flip .pullUpIcon {
-	-webkit-transform:rotate(0deg) translateZ(0);
-}
-
-#pullDown.loading .pullDownIcon, #pullUp.loading .pullUpIcon {
-	background-position:0 100%;
-	-webkit-transform:rotate(0deg) translateZ(0);
-	-webkit-transition-duration:0ms;
-
-	-webkit-animation-name:loading;
-	-webkit-animation-duration:2s;
-	-webkit-animation-iteration-count:infinite;
-	-webkit-animation-timing-function:linear;
-}
-
-@-webkit-keyframes loading {
-	from { -webkit-transform:rotate(0deg) translateZ(0); }
-	to { -webkit-transform:rotate(360deg) translateZ(0); }
-}
-
-/* ul element */
-.split {
-	width: 49%;
-	float: left;
-}
-.clear {
-	clear: both;
-	width: 100%;
-}
-.m-list-item-main-item .split:first-child {
-	padding-right: 10px;
-}
-.m-list-item-main-item .split:last-child {
-	padding-left: 10px;
-	text-align: center;
+	padding: 5px 10px;
+	text-decoration: none;
+	color: #369;
+	display: block;
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
