added ratchet for rapid prototyping

--- a/public/css/ratchet.css
+++ b/public/css/ratchet.css
@@ -148,8 +148,13 @@ a {
   padding: 10px;
 }
 
+.content { 
+  top: 44px;
+  bottom: 51px;
+}
+
 /* Pad top/bottom of content so it doesn't hide behind .bar-title and .bar-tab.
-   Note: For these to work, content must come after both bars in the markup */
+   Note: For these to work, content must come after both bars in the markup 
 .bar-title ~ .content {
   top: 44px;
 }
